force-app/main/default/objects/Concert_Booking__c/Concert_Booking__c.object-meta.xml
<CustomObject>
    <label>Concert Booking</label>
    <nameField>
        <displayFormat>TICKET-{00000}</displayFormat>
        <label>TICKET</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Concert Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>