force-app/main/default/objects/Concert_Booking__c/fields/Concert__c.field-meta.xml
<CustomField>
    <fullName>Concert__c</fullName>
    <label>Concert</label>
    <referenceTo>Concert__c</referenceTo>
    <relationshipLabel>Concert Bookings</relationshipLabel>
    <relationshipName>Concert_Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>